fix button overlapping search box

--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -317,7 +317,7 @@ header {
       position: absolute;
       top: 5px;
       right: 0px;
-      font-size: 1.45em;
+      font-size: 1.40em;
 
       span {
         display: none;
